# task-keeper-be

./: .env.example  Dockerfile  README.md  alembic.ini  db_setup.py  main.py  pyproject.toml
api/: task.py  tasks.py
crud/: task.py
migrations/: env.py
models/: task.py
schemas/: task.py
src/: constants.py  db_setup.py  main.py  utils.py
src/api/: auth.py  tasks.py
src/crud/: task.py  user.py
src/helpers/: __init__.py  check_authentication.py  get_access_token.py  get_current_user.py  get_hashed_password.py  verify_password.py
src/migrations/: env.py
src/migrations/versions/: 302e0e5485dd_add_first_name_and_last_name_to_user_.py  4dcd3d8c6f91_initial_migration.py  f14469ef8e76_initial_migration.py  f3f01c71e8ca_add_birthday_field_to_user.py
src/models/: task.py  user.py
src/repositories/: task.py  user.py
src/schemas/: task.py  user.py
src/services/: task.py
tests/: conftest.py  test_auth_api.py
